--- a/application.properties
+++ b/application.properties
@@ -1,9 +1,11 @@
 #Central Configuration File for All Microservices
 
-key=value
+key=default
 
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.prefer-ip-address=true
+
+spring.application.name=CONFIG-DEFAULT
 
