--- a/application-dev.properties
+++ b/application-dev.properties
@@ -1,1 +1,13 @@
 #Central Configuration File for All Microservices for Development Env
+
+#Central Configuration File for All Microservices
+
+key=Development
+
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
+
+spring.application.name=CONFIG-DEV
+
