--- a/application.properties
+++ b/application.properties
@@ -7,5 +7,5 @@ eureka.client.register-with-eureka=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.prefer-ip-address=true
 
-spring.application.name=CONFIG-DEFAULT
+#spring.application.name=CONFIG-DEFAULT
 
